--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "react": "^16.6.0",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.6.0"
   }
 }
